Fix can't collapse on Firefox browser

--- a/src/Sidebar/styles/common.less
+++ b/src/Sidebar/styles/common.less
@@ -2,4 +2,5 @@
 
 .@{ns}sidebar-collapse {
   transition: flex @sidenav-collapse-transition-config, width @sidenav-collapse-transition-config;
+  overflow: hidden;
 }
